# portfolio

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  docker-compose-prod.yml  docker-compose.yml  manage.py  package.json  portfolio.drawio  pyproject.toml  requirements.txt  setup.cfg
_docker/web/: Dockerfile
nginx/: nginx.conf
portfolio/: urls.py  views.py
portfolio/admin/: __init__.py  experience_admin.py  portfolio_admin.py  project_admin.py  schedule_admin.py  tech_admin.py  work_admin.py
portfolio/admin/inline/: experience_inline.py  work_inline.py
portfolio/migrations/: 0003_alter_experience_options.py  0005_alter_portfolio_experience_with.py  0006_auto_20220124_1448.py
portfolio/models/: __init__.py  experience.py  portfolio.py  project.py  schedule.py  tech.py  work.py
portfolio/models/type/: category_type.py  schedule_type.py  stack_type.py
portfolio/service/: __init__.py  generate_pdf.py
portfolio/templates/: mytemplates.html
portfolio/templatetags/: my_tags.py
portfolio/views/: __init__.py  home.py  portfolio_view.py
portfolio_generate/: settings.py  urls.py
portfolio_generate/settings/: base.py  development.py  production.py
readme/: req.md  scss.md
src/: manage.py
src/portfolio/: apps.py  templatetags.py  urls.py  views.py
src/portfolio/admin/: __init__.py  experience_admin.py  inline.py  portfolio_admin.py  project_admin.py  tech_admin.py  work_admin.py
src/portfolio/migrations/: 0001_initial.py  0002_initial.py  0004_auto_20220121_1059.py  0006_auto_20220125_0017.py  0007_portfolio_name.py
src/portfolio/models/: __init__.py  experience.py  portfolio.py  project.py  tech.py  work.py
src/portfolio/service/: __init__.py  generate_pdf.py
src/portfolio/templatetags/: my_tags.py
src/portfolio/views/: __init__.py  portfolio_view.py
src/portfolio_generate/: asgi.py  settings.py  urls.py  wsgi.py
src/portfolio_generate/settings/: __init__.py  base.py  development.py  production.py
src/static/: main.css
src/templates/: base.html  mytemplates.html  template_1.html
src/templates/registration/: login.html  signup.html
src/templates/rezume/: template_1.html
src/users/: apps.py  urls.py
src/users/admin/: __init__.py  inline.py  (+7 more)
template/templates/: base.html
templates/: base.html  mytemplates.html  profile.html
users/: urls.py
users/admin/: __init__.py  custom_user_admin.py  language_admin.py  language_type_admin.py  social_admin.py  social_type_admin.py  work_places_admin.py
users/forms/: __init__.py  profile_form.py
users/migrations/: 0002_auto_20211025_0735.py  0005_customuser_last_career_meeting.py  0006_alter_customuser_last_career_meeting.py  0007_education.py
users/models/: __init__.py  custom_user.py  education.py  language.py  language_type.py  social.py  social_type.py  work_places.py
users/templates/: base.html  profile.html
users/views/: __init__.py  login_view.py  main_view.py  signup_view.py
(+43 files in other folders)
