[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
readme = 'README.md'
authors = ["odi1n"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"
psycopg2-binary = "^2.9.1"

Django = "^3.2.8"
django-environ = "^0.7.0"
django-json-widget = "^1.1.1"

weasyprint = "52.5"
transliterate = "^1.10.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = false
imports = ["django", "requests", "urllib3"]

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip_glob=["migrations"]
skip=["migrations"]
default_section = "THIRDPARTY"
known_django = ["django", "weasyprint", "transliterate"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
