[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
readme = 'README.md'
authors = ["odi1n"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"

Django = "^4.2.5"
django-environ = "^0.11.2"
django-json-widget = "^1.1.1"

weasyprint = "52.5"
transliterate = "^1.10.2"


[tool.poetry.dev-dependencies]
pytest = "^7.4.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = false
imports = ["django", "requests", "urllib3"]

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip_glob=["migrations"]
skip=["migrations"]
default_section = "THIRDPARTY"
known_django = ["django", "weasyprint", "transliterate"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
